// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HorizontalStroke /> by default matches with snapshot 1`] = `
.c0 {
  display: block;
  border: none;
  background: #222;
  width: 1.88rem;
  height: 0.25rem;
}

<span
  className="c0"
/>
`;

exports[`<HorizontalStroke /> with \`big\` size matches with snapshot 1`] = `
.c0 {
  display: block;
  border: none;
  background: #222;
  width: 3.13rem;
  height: 0.25rem;
}

<span
  className="c0"
/>
`;

exports[`<HorizontalStroke /> with \`huge\` size matches with snapshot 1`] = `
.c0 {
  display: block;
  border: none;
  background: #222;
  width: 6.25rem;
  height: 0.38rem;
}

<span
  className="c0"
/>
`;

exports[`<HorizontalStroke /> with \`tiny\` size matches with snapshot 1`] = `
.c0 {
  display: block;
  border: none;
  background: #222;
  width: 1.25rem;
  height: 0.13rem;
}

<span
  className="c0"
/>
`;

exports[`<HorizontalStroke /> with with and height props matches with snapshot 1`] = `
.c0 {
  display: block;
  border: none;
  background: #222;
  width: 1.88rem;
  height: 0.25rem;
  width: 6.25rem;
  height: 3.13rem;
}

<span
  className="c0"
/>
`;
